--- a/classification_exercises.ipynb
+++ b/classification_exercises.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "5e0c9e15",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pydataset import data\n",
     "import pandas as pd\n",
+    "from acquire import getData\n",
     "# import numpy as np\n",
     "# import seaborn as sns\n",
     "# import matplotlib.pyplot as plt"
@@ -16,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "5ad2eba1",
    "metadata": {},
    "outputs": [
@@ -84,7 +85,7 @@
        "3           4.7          3.2           1.3          0.2  setosa"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "4bcf909f",
    "metadata": {},
    "outputs": [
@@ -106,7 +107,7 @@
        "(150, 5)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "95cd355c",
    "metadata": {},
    "outputs": [
@@ -129,7 +130,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "5291283a",
    "metadata": {},
    "outputs": [
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "1e7450f2",
    "metadata": {},
    "outputs": [
@@ -273,7 +274,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "21deea4b",
    "metadata": {},
    "outputs": [
@@ -375,7 +376,7 @@
        "1          542.4    No     9.1  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "2845de57",
    "metadata": {},
    "outputs": [],
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "437ecf80",
    "metadata": {},
    "outputs": [
@@ -408,7 +409,7 @@
        "7049"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "d2dd8719",
    "metadata": {},
    "outputs": [
@@ -430,7 +431,7 @@
        "Index(['customer_id', 'gender', 'is_senior_citizen', 'partner', 'dependents'], dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "927da3d0",
    "metadata": {},
    "outputs": [
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "id": "c58d40ff",
    "metadata": {},
    "outputs": [
@@ -479,7 +480,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "c75da850",
    "metadata": {},
    "outputs": [
@@ -519,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "id": "c9d6d069",
    "metadata": {},
    "outputs": [
@@ -536,7 +537,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,17 +549,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "id": "32f34343",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://docs.google.com/spreadsheets/d/1Uhtml8KY19LILuZsrDtlsHHDC9wuDGUSe8LTEwvdI5g/export?format=csv&gid=341089357\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -661,7 +655,7 @@
        "2      0  STON/O2. 3101282   7.9250   NaN        S  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "71950b08",
    "metadata": {},
    "outputs": [
@@ -686,7 +680,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "id": "e1d4cf42",
    "metadata": {},
    "outputs": [
@@ -733,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "id": "a22a3ab2",
    "metadata": {},
    "outputs": [
@@ -874,7 +868,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "id": "25d9599f",
    "metadata": {},
    "outputs": [
@@ -906,6 +900,54 @@
     "cats = ['Survived','Pclass','Sex','SibSp','Parch','Embarked']\n",
     "for i in cats:\n",
     "    print(f'{i} categories: {df_google[i].unique()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6504da54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_df = getData('titanic')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "099bbbb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function getData in module acquire:\n",
+      "\n",
+      "getData(db, ds=            filename      db_name  \\\n",
+      "titanic  titanic.csv   titanic_db   \n",
+      "iris        iris.csv      iris_db   \n",
+      "telco      telco.csv  telco_churn   \n",
+      "\n",
+      "                                                                                               sql  \n",
+      "titanic                                                                  SELECT * FROM passengers;  \n",
+      "iris                                    SELECT * FROM measurements JOIN species USING(species_id);  \n",
+      "telco    \\nSELECT * FROM customers\\nJOIN internet_service_types USING(internet_service_type_id)...  )\n",
+      "    Returns: Pandas dataframe of desired dataset\n",
+      "    Required Parameter: dataset name\n",
+      "    Supported datasets: \n",
+      "      titanic\n",
+      "      iris\n",
+      "      telco\n",
+      "    \n",
+      "    Checks working directory for csv file of data.\n",
+      "    If no CSV, retrieves dataset from Codeup DB and stores a local csv file\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(getData)"
    ]
   }
  ],
