--- a/model.ipynb
+++ b/model.ipynb
@@ -25,6 +25,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5cad4bb6",
+   "metadata": {},
+   "source": [
+    "**NOTES TO GRADERS:** This is broken up by dataset, then model type (as opposed to model type then dataset)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3cfddbca",
    "metadata": {},
    "source": [
